feature: support signature object