@@ -103,8 +103,11 @@ class ProfileLayerTest {
                 DigestAlgorithm.SHA256,
                 CanonicalizationMethod.C14N_INCLUSIVE,
                 Collections.singletonList(null),
-                Collections.singletonList(null)
-            )
+                Collections.singletonList(null),
+                null
+            ),
+            null,
+            List.of()
         );
     }
 }
